--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <img src="img/logo.svg" alt="Logo The Booleaner">
     </header>
     <main>
-
+        <section class="heading">
+            <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <p class="subtitle">Scritto da <a href="index.html">The Booleaner</a></p>
+            <p class="date">il 10/10/2020</p>
+            <img src="img/tim-1.jpg" alt="John S and James L. Knight Foundation, by Scott Henrichsen">
+            <img src="img/tim-2.jpg" alt="Wikimedia, by Paul Clarke">
+            <p class="photo-description">1st Photo: John S and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p class="photo-description">2nd Photo: Wikimedia, by Paul Clarke</p>
+        </section>
     </main>
     <footer>
 
