added section.content to main

--- a/index.html
+++ b/index.html
@@ -21,6 +21,44 @@
             <p class="photo-description">1st Photo: John S and James L. Knight Foundation, by Scott Henrichsen</p>
             <p class="photo-description">2nd Photo: Wikimedia, by Paul Clarke</p>
         </section>
+        <section class="content">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem veniam nihil consequuntur accusantium, ea vero qui iusto excepturi? Quod reiciendis doloribus harum iure quaerat dolorum similique autem nam alias nemo?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae ex natus qui, accusantium commodi, reiciendis totam ipsam vel eaque dignissimos culpa neque iure voluptate vero sed architecto aliquid quidem repudiandae.
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sed rerum illum ut, eos pariatur consequatur voluptatibus assumenda perferendis blanditiis vero sapiente dicta natus est ipsum nobis a veniam! Iste.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sed rerum illum ut, eos pariatur consequatur voluptatibus assumenda perferendis blanditiis vero sapiente dicta natus est ipsum nobis a veniam! Iste.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sed rerum illum ut, eos pariatur consequatur voluptatibus assumenda perferendis blanditiis vero sapiente dicta natus est ipsum nobis a veniam! Iste.</li>
+            </ul>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th class="larger">Lorem ipsum dolor</th>
+                        <th class="larger">Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus doloremque et ab earum facere iure temporibus, voluptatibus blanditiis animi quam nostrum labore sed, quibusdam veritatis exercitationem. Reprehenderit earum explicabo corporis!</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus doloremque et ab earum facere iure temporibus, voluptatibus blanditiis animi quam nostrum labore sed, quibusdam veritatis exercitationem. Reprehenderit earum explicabo corporis!</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus doloremque et ab earum facere iure temporibus, voluptatibus blanditiis animi quam nostrum labore sed, quibusdam veritatis exercitationem. Reprehenderit earum explicabo corporis!</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
 
