added another paragraph to .content + highlights

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="content">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem veniam nihil consequuntur accusantium, ea vero qui iusto excepturi? Quod reiciendis doloribus harum iure quaerat dolorum similique autem nam alias nemo?
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae ex natus qui, accusantium commodi, reiciendis totam ipsam vel eaque dignissimos culpa neque iure voluptate vero sed architecto aliquid quidem repudiandae.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="highligthed">Recusandae ex natus qui, accusantium commodi,</span>  reiciendis totam ipsam vel eaque dignissimos culpa neque iure voluptate vero sed architecto aliquid quidem repudiandae.
             </p>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sed rerum illum ut, eos pariatur consequatur voluptatibus assumenda perferendis blanditiis vero sapiente dicta natus est ipsum nobis a veniam! Iste.</li>
@@ -58,6 +58,11 @@
                     </tr>
                 </tbody>
             </table>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem veniam nihil consequuntur accusantium, ea vero qui iusto excepturi? Quod reiciendis doloribus harum iure quaerat dolorum similique autem nam alias nemo?
+                <span class="highligthed">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </span>Recusandae ex natus qui, accusantium commodi,  reiciendis totam ipsam vel eaque dignissimos culpa neque iure voluptate vero sed architecto aliquid quidem repudiandae.
+            </p>
+
         </section>
     </main>
     <footer>
