--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
         </section>
     </main>
     <footer>
-
+        <p class="subtitle">Potrebbero interessarti</p>
+        <div class="container">
+            <div class="img-box">
+                <h2 class="img-title">Lorem Ipsum Dolor</h2>
+            </div>
+            <div class="img-box">
+                <h2 class="img-title">Lorem Ipsum Dolor</h2>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
